syntax = "proto3";

import "google/protobuf/empty.proto";

package rpcpublicv1;

option go_package = "git.jetbrains.space/artdecoction/wt/tower/contracts/accounts/rpcpublicv1";

service Accounts {
  rpc GetAccount (GetAccountRequest) returns (AccountData);
  rpc GetMyAccount (google.protobuf.Empty) returns (AccountData);

  rpc CreateMyAccount (CreateMyAccountRequest) returns (google.protobuf.Empty);
  rpc DeleteMyAccount (google.protobuf.Empty) returns (google.protobuf.Empty);
}

message GetAccountRequest {
  string accountId = 1;
}

message AccountData {
  string accountId = 1;
  string name = 2;
}

message CreateMyAccountRequest {
  string name = 1;
}
