syntax = "proto3";

package accounts.rpcpublic.v1;

import "validate/validate.proto";

service AccountsService {
  rpc GetAccount (GetAccountRequest) returns (GetAccountResponse);
  rpc GetMyAccount (GetMyAccountRequest) returns (GetMyAccountResponse);

  rpc CreateMyAccount (CreateMyAccountRequest) returns (CreateMyAccountResponse);
  rpc DeleteMyAccount (DeleteMyAccountRequest) returns (DeleteMyAccountResponse);
}

message GetAccountRequest {
  string account_id = 1 [(validate.rules).string.uuid = true];
}
message GetAccountResponse {
  string account_id = 1 [(validate.rules).string.uuid = true];
  AccountName name = 2 [(validate.rules).message.required = true];
}

message GetMyAccountRequest {}
message GetMyAccountResponse {
  string account_id = 1 [(validate.rules).string.uuid = true];
  AccountName name = 2 [(validate.rules).message.required = true];
}

message CreateMyAccountRequest {
  string name = 1 [(validate.rules).string = {min_len: 6, max_len: 16, pattern: "^[a-zA-Z0-9]+$"}];
}
message CreateMyAccountResponse {}

message DeleteMyAccountRequest {}
message DeleteMyAccountResponse {}

message AccountName {
  string base = 1 [(validate.rules).string = {min_len: 6, max_len: 16, pattern: "^[a-zA-Z0-9]+$"}];
  uint32 number = 2 [(validate.rules).uint32.gte = 1];
}
